--- a/client/src/App.css
+++ b/client/src/App.css
@@ -38,6 +38,21 @@
     background-size: cover !important;
 }
 
+.top-quote {
+  font-family: cursive;
+  margin-top: 80px;
+  margin-left: 60px;
+  font-size: 30px;
+}
+
+.bottom-quote {
+  font-family: cursive;
+  margin-bottom: 80px;
+  margin-right: 100px;
+  font-size: 30px;
+  text-align: right;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     /* animation: App-logo-spin infinite 20s linear; */
