Created static user profile page with style adjustments

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,6 +36,7 @@
 .background {
   background-image: url('./components/Images/home-background.jpeg') !important;
     background-size: cover !important;
+    padding: 2rem;
 }
 
 .top-quote {
