--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,8 @@
-@media only screen and (min-width: 992px) {
-  html, body {
-    box-sizing: border-box;
-    height: 100%;
-    min-width:1300px;        /* Suppose you want minimum width of 1000px */
-  }
+html, body {
+  box-sizing: border-box;
+  height: 100%;
 }
+
 body > #root > div {
   height: 100vh;
 }
@@ -15,11 +13,11 @@ body {
 }
 
 .card {
-  margin: auto 2rem;
+  margin: auto;
   display: flex;
   background-color: rgb(255, 255, 255);
   flex-direction: column;
-  max-width: 40rem;
+  min-width: 9rem;
   padding: 2rem;
   box-shadow: 0 0.25rem 0.5rem 0 rgba(0, 0, 0, 0.2);
 }
