added search bar

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -54,6 +54,10 @@
   text-align: right;
 }
 
+.search-bar {
+  align-content: space-around;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     /* animation: App-logo-spin infinite 20s linear; */
